cluster/apps/networking/headscale/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: headscale
  labels:
    istio-injection: enabled
  annotations:
    lbipam.cilium.io/sharing-cross-namespace: istio-system
